--- a/.github/workflows/validate-golang.yaml
+++ b/.github/workflows/validate-golang.yaml
@@ -3,8 +3,8 @@ name: Validate-Golang
 on:
   #workflow_dispatch:
   push:
-    tags:
-      - '*'
+    branches:
+      - main
 
 jobs:
   Validate-Golang:
