--- a/.github/workflows/validate-golang.yaml
+++ b/.github/workflows/validate-golang.yaml
@@ -12,10 +12,24 @@ jobs:
     container:
       image: golangci/golangci-lint:v1.55
     environment: k8s
-    continue-on-error: false
+    continue-on-error: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
       - name: Lint code
         run: |
           golangci-lint run
+
+  Test-Golang:
+    runs-on: arc-runner-scale-set-kaeffken
+    container:
+      image: golang:1.21.5
+    environment: k8s
+    continue-on-error: true
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+      - name: Test code
+        run: |
+          go mod tidy
+          go test ./... -v
