--- a/.github/workflows/validate-golang.yaml
+++ b/.github/workflows/validate-golang.yaml
@@ -1,50 +1,21 @@
 ---
 name: Validate-Golang
 on:
-  #workflow_dispatch:
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
-  Lint-Golang:
-    runs-on: arc-runner-scale-set-kaeffken
-    container:
-      image: golangci/golangci-lint:v1.55
-    environment: k8s
-    continue-on-error: true
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.1
-      - name: Lint code
-        run: |
-          golangci-lint run
-
-  Test-Golang:
-    runs-on: arc-runner-scale-set-kaeffken
-    container:
-      image: golang:1.21.5
-    environment: k8s
-    continue-on-error: true
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.1
-      - name: Test code
-        run: |
-          go mod tidy
-          go test ./... -v
-
-  Build-Golang:
-    runs-on: arc-runner-scale-set-kaeffken
-    container:
-      image: golang:1.21.5
-    environment: k8s
-    continue-on-error: true
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4.1.1
-      - name: Test code
-        run: |
-          go mod tidy
-          CGO_ENABLED=0 go build -buildvcs=false -o ./kaeffken
-          ./kaeffken -h
+  validate-terraform:
+    name: Valdiate Golang
+    uses: stuttgart-things/stuttgart-things/.github/workflows/validate-golang.yaml@main  
+    with:
+      module-name: kaeffken
+      environment-name: k8s
+      runs-on: arc-runner-scale-set-kaeffken
+      golint-version: v1.55
+      golang-version:: "1.21.5"
+      continue-error: false
+      accept-linterrors: true
+      accept-failedtests: false
