--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -7,13 +7,33 @@ vars:
     sh: date +"%y.%m%d.%H%M"
 
 tasks:
+
+  branch:
+    desc: Create branch from main
+    cmds:
+      - git checkout main
+      - git branch
+      - git pull
+      - |
+        echo "Enter to be created (remote) branch:"
+        read BRANCH_NAME;
+        git checkout -b ${BRANCH_NAME}
+        git push origin ${BRANCH_NAME}
+      - git branch
+      - git branch --set-upstream-to=origin/main ${BRANCH_NAME}
+      - |
+        echo "Enter to be created tag: (${BRANCH_NAME})"
+        read BRANCH_TAG;
+        git tag -a ${BRANCH_TAG} -m 'updated for stuttgart-things {{ .DATE }} for tag version ${BRANCH_TAG}'
+        git push --tags
+
   lint:
     desc: Lint code
     cmds:
       - go mod tidy
       - cmd: golangci-lint run
         ignore_error: true
-
+        
   test:
     desc: Test code
     cmds:
