--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -61,5 +61,5 @@ tasks:
         read COMMIT_MESSAGE;
         git add cmd/*
         git add modules/*
-        git commit -am '$(echo ${COMMIT_MESSAGE})'
+        git commit -am "$(echo ${COMMIT_MESSAGE})"
         git push origin -u {{ .BRANCH }}
