--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -54,6 +54,7 @@ tasks:
       - cmd: "{{ .PROJECT_NAME }}"
 
   commit:
+    desc: Commit + push code into branch
     cmds:
       - git pull
       - |
@@ -63,3 +64,9 @@ tasks:
         git add modules/*
         git commit -am "$(echo ${COMMIT_MESSAGE})"
         git push origin -u {{ .BRANCH }}
+
+  pr:
+    desc: Create pull request into main
+    cmds:
+      - task: commit
+      - gh pr create -t "pr" -b "created pr for ${BRANCH_NAME} branch into main"
