updated taskfile for pr

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -1,11 +1,11 @@
 ---
-version: "3"
+version: 3
 vars:
+  REPOSITORY_NAME: stuttgart-things
   PROJECT_NAME:
     sh: pwd | grep -o "[^/]*$"
   DATE:
     sh: date +"%y.%m%d.%H%M"
-  REPOSITORY_NAME: stuttgart-things
   MODULE: github.com/{{ .REPOSITORY_NAME }}/{{ .PROJECT_NAME }}
   GIT_COMMIT:
     sh: git log -n 1 --format=%h
