--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -70,3 +70,15 @@ tasks:
     cmds:
       - task: commit
       - gh pr create -t "{{ .BRANCH }}" -b "{{ .BRANCH }} branch into main"
+
+  delete-branch:
+    desc: Delete branch from origin
+    cmds:
+      - git checkout main
+      - git branch
+      - git pull
+      - |
+        echo "Enter to be deleted (remote) branch:"
+        read BRANCH_NAME;
+        git branch -d ${BRANCH_NAME}
+        git push origin -d ${BRANCH_NAME}
