--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -61,6 +61,7 @@ tasks:
         echo "ENTER COMMIT MESSAGE"
         read COMMIT_MESSAGE;
         git add cmd/*
+        git add .github/workflows/*
         git add modules/*
         git commit -am "$(echo ${COMMIT_MESSAGE})"
         git push origin -u {{ .BRANCH }}
