--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -10,6 +10,8 @@ on:
 jobs:
   Go-Release:
     runs-on: arc-runner-scale-set-kaeffken
+    permissions:
+      contents: write    
     container:
       image: goreleaser/goreleaser-cross:v1.21.5
     environment: k8s
