--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -13,7 +13,7 @@ jobs:
     permissions:
       contents: write    
     container:
-      image: goreleaser/goreleaser-cross:v1.21.5
+      image: goreleaser/goreleaser:v1.23.0
     environment: k8s
     continue-on-error: false
     steps:
