--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -26,6 +26,6 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --clean
+          args: release --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
