--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -19,13 +19,18 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - name: Check code
+        run: |
+          ls -lta
+          pwd
+          git pull
+          
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
-          version: latest
+          version: v1.23.0
           args: release --skip-validate
+          workdir: .    
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
