--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -2,8 +2,6 @@
 name: Build binaries with goreleaser
 on:
   push:
-    branches:
-      - main
     tags:
       - '*'
 
@@ -19,19 +17,17 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
-      - name: Check code
+      - name: Check code/git
         run: |
           ls -lta
-          pwd
-          git config --global --add safe.directory /__w/kaeffken/kaeffken
+          git config --global --add safe.directory '*'
           git pull
-          
-      - name: Run GoReleaser
+      - name: Release binaries
         uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
           version: v1.23.0
-          args: release --skip-validate
+          args: release --clean
           workdir: .    
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
