--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -20,9 +20,8 @@ jobs:
       - name: Check code/git
         run: |
           ls -lta
-          env
-          git config --global --add safe.directory /__w/*
-          #git config --global --add safe.directory /__w/kaeffken/kaeffken
+          printenv
+          git config --global --add safe.directory /__w/kaeffken/kaeffken
           git pull
       - name: Release binaries
         uses: goreleaser/goreleaser-action@v5
