--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -2,6 +2,8 @@
 name: Build binaries with goreleaser
 on:
   push:
+    #branches:
+    #  - main
     tags:
       - '*'
 
@@ -17,18 +19,20 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
-      - name: Check code/git
+      - name: Check code
         run: |
           ls -lta
-          printenv
+          pwd
           git config --global --add safe.directory /__w/kaeffken/kaeffken
+          git checkout main
           git pull
-      - name: Release binaries
+          
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           distribution: goreleaser
           version: v1.23.0
-          args: release --clean
+          args: release --skip-validate
           workdir: .    
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
