--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.1.1
         with:
+          ref: main
           fetch-depth: 0
       - name: Check code
         run: |
