--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -1,37 +1,18 @@
 ---
-name: Build binaries with goreleaser
+name: Release-Golang
 on:
+  workflow_dispatch:
   push:
-    #branches:
-    #  - main
     tags:
       - '*'
-
 jobs:
-  Go-Release:
-    runs-on: arc-runner-scale-set-kaeffken
-    container:
-      image: golang:1.21.5
-    environment: k8s
-    continue-on-error: false
-    steps: 
-      - name: Checkout code
-        uses: actions/checkout@v4.1.1
-        with:
-          ref: main
-          fetch-depth: 0
-      - name: Check code
-        run: |
-          ls -lta
-          pwd
-          git config --global --add safe.directory /__w/kaeffken/kaeffken
-          git pull origin main          
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        with:
-          distribution: goreleaser
-          version: v1.23.0
-          args: release --skip-validate
-          workdir: .    
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+  release-golang:
+    name: Release Golang
+    uses: stuttgart-things/stuttgart-things/.github/workflows/release-golang.yaml@main
+    with:
+      module-name: kaeffken
+      environment-name: k8s
+      runs-on: arc-runner-scale-set-kaeffken
+      goreleaser-version: v1.23.0
+      golang-version: "1.21.5"
+    secrets: inherit
