--- a/.github/workflows/validate-golang.yaml
+++ b/.github/workflows/validate-golang.yaml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      #- main
-      - ADD*
+      - main
   pull_request:
     types: [opened, reopened]
 
