--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -71,6 +71,9 @@ tasks:
     cmds:
       - task: commit
       - gh pr create -t "{{ .BRANCH }}" -b "{{ .BRANCH }} branch into main"
+      - gh pr merge $(gh pr list | grep "^[^#;]" | awk '{print $1}') --auto --rebase --delete-branch
+      - git checkout main && git pull
+
 
   delete-branch:
     desc: Delete branch from origin
