--- a/.github/workflows/kaniko.yaml
+++ b/.github/workflows/kaniko.yaml
@@ -4,16 +4,29 @@ on:
   workflow_dispatch:
 
 jobs:
-  kaniko:
-    environment: k8s
+  build:
     runs-on: arc-runner-scale-set-kaeffken
+    environment: k8s
+    container:
+      image: gcr.io/kaniko-project/executor:debug # the kaniko image
+    permissions:
+      contents: read # read the repository
+      packages: write # push to GHCR, omit if not pushing to GitHub's container registry
+
     steps:
-      - uses: actions/checkout@master
-      - name: Kaniko build
-        uses: aevea/action-kaniko@master
-        with:
-          image: aevea/kaniko
-          registry: ghcr.io
-          password: ${{ secrets.TOKEN }}
-          cache: true
-          cache_registry: aevea/cache
+      - name: Build and push container test
+        run: |
+          # Write config file, change to your destination registry
+          AUTH=$(echo -n ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} | base64)
+          echo "{\"auths\": {\"ghcr.io\": {\"auth\": \"${AUTH}\"}}}" > /kaniko/.docker/config.json
+
+          # Configure git
+          export GIT_USERNAME="kaniko-bot"
+          export GIT_PASSWORD="${{ secrets.GITHUB_TOKEN }}" # works for GHEC or GHES container registry
+
+          # Build and push (sub in your image, of course)
+          /kaniko/executor --dockerfile="./images/ubi9.Dockerfile" \
+            --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}" \
+            --destination="ghcr.io/some-natalie/kubernoodles/kaniko-build:test" \
+            --push-retry 5 \
+            --image-name-with-digest-file /workspace/image-digest.txt
