--- a/.github/workflows/kaniko.yaml
+++ b/.github/workflows/kaniko.yaml
@@ -14,6 +14,11 @@ jobs:
       packages: write # push to GHCR, omit if not pushing to GitHub's container registry
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: '0'
+    
       - name: Build and push container test
         run: |
           # Write config file, change to your destination registry
