--- a/.github/workflows/kaniko.yaml
+++ b/.github/workflows/kaniko.yaml
@@ -19,10 +19,7 @@ jobs:
         run: |
           # Write config file, change to your destination registry
           AUTH=$(echo -n ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} | base64)
-          #echo ${{ github.actor }}
-          #echo $AUTH
-          #echo "{\"auths\": {\"ghcr.io\": {\"auth\": \"${AUTH}\"}}}" > /kaniko/.docker/config.json
-
+          echo $AUTH
           echo ${{ secrets.DOCKER }} | base64 -d > /kaniko/.docker/config.json
           cat /kaniko/.docker/config.json
           # Configure git
