--- a/.github/workflows/release-golang.yaml
+++ b/.github/workflows/release-golang.yaml
@@ -11,7 +11,7 @@ on:
       - '*'
 jobs:
   Create-Git-Tag:
-    name: Release Golang
+    name: Create Git Tag
     uses: stuttgart-things/stuttgart-things/.github/workflows/git-tag.yaml@main
     if: github.ref_type != 'tag' && github.event.inputs.release-tag != ''
     with:
@@ -33,4 +33,19 @@ jobs:
       runs-on: arc-runner-scale-set-kaeffken
       goreleaser-version: v1.23.0
       golang-version: "1.21.5"
+    secrets: inherit
+
+  Build-Kaniko-Image:
+    name: Build Kaniko
+    uses: stuttgart-things/stuttgart-things/.github/workflows/build-kaniko.yaml@main
+    if: always()
+    needs: Create-Git-Tag
+    with:
+      environment-name: k8s
+      runs-on: arc-runner-scale-set-kaeffken
+      dockerfile: ./Dockerfile
+      registry: ghcr.io
+      repository: stuttgart-things/kaeffken
+      image: kaniko-build
+      tag: ${{ github.event.inputs.release-tag }}
     secrets: inherit
