--- a/.github/workflows/build-kaniko.yaml
+++ b/.github/workflows/build-kaniko.yaml
@@ -2,7 +2,28 @@
 name: Kaniko Build
 on:
   workflow_dispatch:
-
+    inputs:
+      registry:
+        type: choice
+        description: Target registry
+        default: ghcr.io
+        options:
+          - ghcr.io
+          - scr.cd43.sthings-pve.labul.sva.de
+      repository:
+        type: choice
+        description: Target repository
+        default: stuttgart-things/kaeffken
+        options:
+          - stuttgart-things/kaeffken
+      image:
+        type: string
+        description: Image name
+        default: kaeffken
+      tag:
+        type: string
+        description: Image name       
+        
 jobs:
   Build-Kaniko-Image:
     name: Build Kaniko
@@ -11,8 +32,8 @@ jobs:
       environment-name: k8s
       runs-on: arc-runner-scale-set-kaeffken
       dockerfile: ./Dockerfile
-      registry: ghcr.io
-      repository: stuttgart-things/kaeffken
-      image: kaniko-build
-      tag: test2
+      registry: "${{ github.event.inputs.registry }}"
+      repository: "${{ github.event.inputs.repository }}"  
+      image: "${{ github.event.inputs.image }}" 
+      tag: "${{ github.event.inputs.tag }}"
     secrets: inherit
