--- a/.github/workflows/build-kaniko.yaml
+++ b/.github/workflows/build-kaniko.yaml
@@ -22,7 +22,7 @@ on:
         default: kaeffken
       tag:
         type: string
-        description: Image name       
+        description: Image tag       
         
 jobs:
   Build-Kaniko-Image:
