added option for render and encrypt builtin secrets

--- a/tests/secret.yaml
+++ b/tests/secret.yaml
@@ -5,3 +5,9 @@ metadata:
   name: secret
 data:
   password: wHat6ver
+kind: Secret
+apiVersion: v1
+metadata:
+  name: secret
+data:
+  password: wHat6ver
