--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,10 @@
 ---
-name: Validate-Golang
+name: Build
 on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - '*'
   pull_request:
     types: [opened, reopened]
 
