--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,3 +20,10 @@ jobs:
       golang-version: "1.23.1"
       accept-linterrors: true
       accept-failedtests: false
+
+  build-image:
+    name: Build Image
+    uses: stuttgart-things/stuttgart-things/.github/workflows/call-ko-build.yaml@main
+    with:
+      environment-name: k8s
+      runs-on: docker
