added render command

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,9 +23,9 @@ jobs:
       accept-linterrors: true
       accept-failedtests: false
 
-  build-image:
-    name: Build Image
-    uses: stuttgart-things/stuttgart-things/.github/workflows/call-ko-build.yaml@main
-    with:
-      environment-name: k8s
-      runs-on: docker
+  # build-image:
+  #   name: Build Image
+  #   uses: stuttgart-things/stuttgart-things/.github/workflows/call-ko-build.yaml@main
+  #   with:
+  #     environment-name: k8s
+  #     runs-on: docker
