--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -170,3 +170,9 @@ tasks:
       - task: commit
       - npx semantic-release --dry-run
       - npx semantic-release --debug --no-ci
+      - rm -rf ./dist
+      - goreleaser healthcheck
+      - goreleaser check
+      - goreleaser release --skip=publish --snapshot --clean
+      - goreleaser release --clean
+      - rm -rf ./dist
