--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,8 +2,22 @@
 version: 1
 before:
   hooks:
+    # You may remove this if you don't use go modules.
     - go mod tidy
+    # you may remove this if you don't need go generate
     - go generate ./...
+builds:
+  - env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      #- windows
+      - darwin
+    ldflags:
+      - -s -w -X github.com/stuttgart-things/kaeffken/cmd.version={{.Version}}
+      - -s -w -X github.com/stuttgart-things/kaeffken/cmd.date={{.Date}}
+      - -s -w -X github.com/stuttgart-things/kaeffken/cmd.commit={{.Commit}}
+
 
 builds:
   - env:
