--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,19 +12,11 @@ builds:
     goos:
       - linux
       #- windows
-      - darwin
+      #- darwin
     ldflags:
       - -s -w -X github.com/stuttgart-things/kaeffken/cmd.version={{.Version}}
       - -s -w -X github.com/stuttgart-things/kaeffken/cmd.date={{.Date}}
       - -s -w -X github.com/stuttgart-things/kaeffken/cmd.commit={{.Commit}}
-
-
-builds:
-  - env:
-      - CGO_ENABLED=0
-    goos:
-      - linux
-      - darwin
 
 archives:
   - format: tar.gz
