--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -123,7 +123,7 @@ tasks:
       - gh pr create -t "{{ .BRANCH }}" -b "{{ .BRANCH }} branch into main"
       - sleep 20s
       - gh pr checks $(gh pr list | grep "^[^#;]" | awk '{print $1}') --watch
-      - gh pr merge $(gh pr list | grep "^[^#;]" | awk '{print $1}') --auto --rebase --delete-branch
+      - gh pr merge $(gh pr list | grep "^[^#;]" | grep "{{ .BRANCH }}" | awk '{print $1}') --auto --rebase --delete-branch
       - git checkout main && git pull
 
   delete-branch:
