--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,7 @@ jobs:
       golang-version: "1.23.1"
       accept-linterrors: true
       accept-failedtests: false
+    secrets: inherit
 
   # build-image:
   #   name: Build Image
