--- a/.ko.yaml
+++ b/.ko.yaml
@@ -1,6 +1,5 @@
 ---
-defaultBaseImage: ghcr.io/stuttgart-things/sthings-alpine:1.23
-
+defaultBaseImage: ghcr.io/stuttgart-things/sthings-alpine:3.9.21-alpine
 builds:
   - id: kaeffken
     dir: .
