--- a/tests/secret-values.yaml
+++ b/tests/secret-values.yaml
@@ -3,5 +3,5 @@ database:
   host: "localhost"
   port: 5432
   username: "dbuser"
-  password: "dbpassword"
+  password: "dbpassword" #pragma: allowlist secret
   name: "example_db"
