fix: updated sops secret rendering

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -153,10 +153,15 @@ tasks:
       - task: commit
       - npx semantic-release --dry-run
       - npx semantic-release --debug --no-ci
+      #- task: goreleaser
+      - task: build-ko
+
+  goreleaser:
+    desc: Build bins w/ goreleaser
+    cmds:
       - rm -rf ./dist
       - goreleaser healthcheck
       - goreleaser check
       - goreleaser release --skip=publish --snapshot --clean
       - goreleaser release --clean
       - rm -rf ./dist
-      - task: build-ko
